Made configuration file based.

--- a/Pretty/util/c.config
+++ b/Pretty/util/c.config
@@ -1,3 +1,9 @@
+# C configuration file
+# By R. Coleman
+#
+# Measure is "boxes" (for box or reticular cell) counting or "mass" (for mass radius)
+pretty.measure boxes
+# C keywords
 pretty.keyword auto
 pretty.keyword break
 pretty.keyword bool
@@ -44,7 +50,7 @@ pretty.keyword undef
 pretty.keyword warning
 pretty.keyword line
 pretty.keyword pragma
-# C-library
+# C-library symbols
 pretty.keyword NULL
 pretty.keyword size_t
 pretty.keyword printf
@@ -62,7 +68,8 @@ pretty.keyword stderr
 pretty.keyword free
 pretty.keyword malloc
 pretty.keyword main
+# C delimiters (as a regex)
+pretty.delimiters [\s\\}\{\]\[*\-+\|/\?\.><=%\$#!\^&)(,:;]
 # Miscellaneous
 pretty.keyword argc
 pretty.keyword argv
-pretty.delimiters \s/}{][*-+|\\?.><=%$#!^&)(,:;
