Added processing for computing M.

--- a/Pretty/util/c.config
+++ b/Pretty/util/c.config
@@ -1,6 +1,9 @@
 # C configuration file
 # By R. Coleman
 #
+# Artifact type
+pretty.artefact block
+
 # Measure is "boxes" (for box or reticular cell) counting or "mass" (for mass radius)
 pretty.measure boxes
 # C keywords
