--- a/Pretty/.classpath
+++ b/Pretty/.classpath
@@ -4,8 +4,9 @@
 	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="fractop-0.3c.jar"/>
-	<classpathentry kind="lib" path="antlr-4.5.1-complete.jar"/>
 	<classpathentry kind="lib" path="boldt-cgrammar.jar"/>
 	<classpathentry kind="lib" path="readability.jar"/>
+	<classpathentry kind="lib" path="antlr-4.5.3-complete.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Boldt-CG4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
