--- a/Pretty/.classpath
+++ b/Pretty/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="readability.jar"/>
 	<classpathentry kind="lib" path="antlr-4.5.3-complete.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Boldt-CG4"/>
+	<classpathentry kind="lib" path="Pogje.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
