--- a/Pretty/.classpath
+++ b/Pretty/.classpath
@@ -6,7 +6,7 @@
 	<classpathentry kind="lib" path="fractop-0.3c.jar"/>
 	<classpathentry kind="lib" path="readability.jar"/>
 	<classpathentry kind="lib" path="antlr-4.5.3-complete.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/Boldt-CG4"/>
 	<classpathentry kind="lib" path="Pogje.jar"/>
+	<classpathentry kind="lib" path="boldt-cgrammar.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
