--- a/Pretty/.classpath
+++ b/Pretty/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="lib" path="Pogje.jar"/>
 	<classpathentry kind="lib" path="boldt-cgrammar.jar"/>
 	<classpathentry kind="lib" path="commons-lang3-3.4.jar"/>
+	<classpathentry kind="lib" path="commons-io-2.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
